# api-db-seeder

./: .env  Cargo.toml  Makefile  readme.md
src/: main.rs  models.rs  schema.rs
