[package]
name = "api-db-seeder"
version = "0.1.0"
edition = "2021"

[dependencies]
fake = { version = "2.8", features = ["derive"] }
diesel = { version = "2.1.0", features = [
    "chrono",
    "postgres",
    "network-address",
] }
diesel_geometry = "1.4.0"
dotenvy = "0.15"
chrono = { version = "0.4.26", features = ["serde"] }
ipnetwork = "0.20.0"
bcrypt = "0.15.0"
strum = { version = "0.25", features = ["derive"] }
convert_case = "0.6.0"
